# hyperspec

./: .gitignore  LICENSE  pyproject.toml
src/: __init__.py
src/hyperspec/: __init__.py  io.py  stats.py
tests/: test_stats.py
