[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hyperspec"]

[project]
name = "hyperspec"
authors = [{ name = "Simon Mutch", email = "smutch@unimelb.edu.au" }]
license = { text = "Apache-2.0" } 
version = "0.1.0"
description = "Tools for hyperspectral image processing"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0",
    "opencv-python>=4.11.0.86",
    "scikit-learn>=1.6.1",
    "spectral>=0.23.1",
    "xarray>=2025.1.2",
]

[dependency-groups]
dev = [
    "ipython>=9.2.0",
    "pytest>=8.4.1",
]
